--- a/proyecto final html/html/api.css
+++ b/proyecto final html/html/api.css
@@ -1,12 +1,23 @@
 #texto-animales {
-    margin: 20px;
-    padding: 20px;
-    background-color: white;
+    margin: 40px;
+    padding: 40px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    min-height: 100px;
+    height: 6000px;
     font-family: 'Cormorant Garamond', serif;
 }
+
+ ul {
+  padding-left: 20px;
+  display: block;
+
+}
+
+ li {
+  margin-bottom: 5px;
+  font-family: sans-serif;
+}
+
 
 
 h1{
@@ -49,7 +60,7 @@ h1{
 .progress {
     width: 100%;
     height: 20px;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 20px;
